src/styles/main.scss
// scss-lint:disable IdSelector
@import 'variables';
@import 'mixins';
@import 'fonts';

html {
    font-family: 'Neue Helvetica W01', sans-serif;
    font-size: 62.5%;
    font-weight: 300;
    line-height: 1.42857143;
    text-size-adjust: 100%; /* Prevent font scaling in landscape while allowing user zoom */
}

body {
    color: $text-dark;
    display: flex;
    flex-direction: column;
    font-size: 1.6rem;
    line-height: 2.5rem;
    margin: 0;
    min-height: 100vh;
}

* {
    box-sizing: border-box;
}

a {
    color: color(primary);
    text-decoration: none;
}

p {
    margin-bottom: 1rem;
}

strong {
    font-weight: bold;
}

.no-scroll {
    overflow: hidden;
}

.no-bullets {
    // Hide bullets in IE
    list-style-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
    list-style-type: none;
}

sup {
    font-size: 66%;
    margin-left: 0.1rem;
    position: relative;
    top: -0.25em; // em because it is relative to current font size
    vertical-align: top;
}

.text-content {
    flex-direction: column;
    margin: 0 auto;
    max-width: 120rem;
}

.go-to {
    color: color(cyan);
    font-size: 1.7rem;
    font-weight: 500;

    &::after {
        content: ' >';
    }
}

.scrolldown-chevron {
    align-items: center;
    display: flex;
    font-size: 3rem;
    height: 0;
    justify-content: space-around;
    position: relative;
    top: -3rem;
    z-index: 100;

    @include phone {
        display: none;
    }

    i {
        color: color(neutral-lightest);
        padding: 0 2rem 0.4rem;
        text-shadow: 0 0.2rem 0.2rem rgba(color(neutral-dark), 0.25);
    }
}

.sr-only {
    border: 0;
    clip: rect(0, 0, 0, 0);
    height: 0.1rem;
    margin: -0.1rem;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 0.1rem;
}

.hidden {
    display: none;
}

.no-scroll,
.toc-overlay {
    overflow: hidden;
}

.mac-scroll {
    -webkit-overflow-scrolling: touch;

    &::-webkit-scrollbar {
        -webkit-appearance: none;
    }

    &::-webkit-scrollbar:vertical {
        width: 0.8rem;
    }

    &::-webkit-scrollbar-thumb {
        background-color: rgba(color(neutral-darkest), 0.3);
        border: thin solid color(neutral-lightest);
        border-radius: 0.8rem;
    }

    &::-webkit-scrollbar-track {
        background-color: color(neutral-lightest);
        border-radius: 0.8rem;
    }
}

.nojs {
    background-color: darken(color(cyan), 15%);
    height: 100vh;
    width: 100vw;

    p {
        background-color: color(neutral-lightest);
        left: 50%;
        padding: 5rem 3rem;
        position: absolute;
        top: 50%;
        transform: translate3d(-50%, -50%, 0);
    }
}

#main {
    flex: 1 0 auto;
    padding-top: 6rem;
    z-index: 0;

    @include desktop {
        padding-top: 11rem;
    }

    .toc-overlay & {
        z-index: 2;
    }
}

#maincontent {
    outline: none;

    &:focus {
        animation: pulse ease-in 1;
        animation-duration: 1s;
        opacity: 1;
    }
}

// Boxed Page

.page {
    display: flex;
    flex-flow: column nowrap;
}

.boxed {
    display: flex;
    flex-flow: column nowrap;
    margin: 0 auto;
    max-width: $boxed-width;
    padding: 0 1.5rem;
    width: 100%;
}

.no-style.page .boxed {
    margin: 4rem auto 8rem;

    @include desktop {
        text-align: center;
    }
}



.subhead { // for banner with text only
    align-items: center;
    display: flex;
    font-weight: normal;
    max-width: $boxed-width;
    padding: 8rem 1.5rem;
    text-align: center;
    width: 100%;

    @include phone {
        text-align: left;
    }

    h1 {
        line-height: 1;
        margin: 0;
    }

    p {
        max-width: 80%;

        @include phone {
            max-width: 100%;
        }
    }

    a {
        color: color(cyan);

        &:hover,
        &:focus {
            color: rgba(color(cyan), 0.5);
        }
    }
}

.strips {
    width: 100%;
}

[href=""],  // for testing empty links
[href="#"] {
    border: 0.3rem solid color(danger);
}

@import 'components/add-another';
@import 'components/animations';
@import 'components/bucket';
@import 'components/buttons';
@import 'components/filter-buttons';
@import 'components/forms';
@import 'components/headers';
@import 'components/hero';
@import 'components/intro';
@import 'components/responsive';
@import 'components/social';
@import 'components/strips';
@import 'components/tag-multi-select';

